--- a/public/src/assets/css/aesthetic.css
+++ b/public/src/assets/css/aesthetic.css
@@ -242,6 +242,7 @@ urse Hero Lower Curl */
     margin: 0;
     padding: 0;
     overflow: hidden;
+    line-height: 0;
 }
 
 .main-course-hero-lower-curl svg {
