--- a/public/src/assets/css/collagen-hairloss.css
+++ b/public/src/assets/css/collagen-hairloss.css
@@ -241,6 +241,7 @@ body::-webkit-scrollbar {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    line-height: 0;
 }
 
 .main-course-hero-lower-curl svg {
