--- a/public/src/assets/css/nailcare.css
+++ b/public/src/assets/css/nailcare.css
@@ -249,6 +249,7 @@ urse Hero Lower Curl */
     margin: 0;
     padding: 0;
     overflow: hidden;
+    line-height: 0;
 }
 
 .main-course-hero-lower-curl svg {
